style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* outline: 1px solid orange; */
}
body {
  background: #02012e;
  color: antiquewhite;
}

.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 2rem;
}

.navbar .cont {
  background-color: #1bbedf;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 90%;
  margin: auto;
  padding: 1rem;
}

.logo {
  width: 4rem;
  display: none;
}

.navbar a {
  color: #fff;
  text-decoration: none;
}

ul {
  list-style: none;
  display: flex;
  flex-direction: row;
  gap: 1rem;
}

.content {
  width: 100%;
  height: 100vh;
  position: fixed;
  opacity: 0.15;
  z-index: -1;
}

.me {
  display: flex;
  flex-direction: row;
  margin: 3rem auto;
  gap: 2rem;
  width: 90%;
}
.intro {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-self: center;
}

.pic {
  width: 40%;
  border: 2px solid #00bdfc;
  box-shadow: 2px 2px 10px #00c8ff76;
  border-radius: 50px;
}
.wrk {
  background-color: #fff;
  padding: 5px;
  text-decoration: none;
  border-radius: 5px;
  font-size: 10px;
  cursor: pointer;
}
.hire {
  background-color: blue;
  padding: 5px;
  color: #fff;
  text-decoration: none;
  border-radius: 5px;
  font-size: 10px;
  cursor: pointer;
}

.divide {
  background-color: #fff;
  width: 100%;
  height: 50px;
}

/* ABOUT ME SECTION */

#aboutme {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 90%;
  align-self: center;
  position: relative;
}
.reach {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.tag {
  background-color: #fff;
  color: #1c0649;
  padding: 1rem;
  text-align: center;
  align-self: center;
  font-weight: bold;
  position: relative;
  top: 0;
  left: 0;
}

.tag::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 20%;
  border-left: 20px solid transparent;
  border-right: 30px solid transparent;
  border-bottom: 30px solid #fff;
  transform: rotate(-90deg);
  z-index: -1;
}

.abt {
  width: 10rem;
}

.myskill {
  display: none;
}
.head {
  text-align: center;
  color: #00ffd5;
  font-size: 15px;
  font-weight: bold;
  margin-bottom: 10px;
}

.level {
  background-color: #03065e;
  width: 90%;
  font-size: 7px;
  color: #fff;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-bottom: 5px;
  border: 1px solid #cdc3c3;
}

.writeup {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-self: center;
}

.writeup span {
  color: #0bd0f8;
}

.info {
  display: flex;
  flex-direction: row;
  gap: 2rem;
}

.info a {
  color: #fff;
  text-decoration: none;
}

/* RESPONSIVENESS */

@media screen and (min-width: 520px) and (max-width: 600px) {
  .logo {
    display: block;
    width: 15%;
  }
  .navbar .cont{
    gap: 6rem;
  }
  .quick {
    display: flex;
    flex-direction: row;
    gap: 2rem;
  }
  .writeup {
    border: 1px dashed grey;
  }
  .myskill {
    display: none;
  }
}

@media screen and (min-width: 600px){
  .logo {
    display: block;
    width: 15%;
    max-width: 6rem;
  }
  .navbar .cont {
    gap: 10rem;
    justify-content: space-between;
  }
  nav {
    width: 60%;
    max-width: 700px;
  }
  ul {
    justify-content: space-between;
  }

  .me {
    max-width: 700px;
    text-align: center;
  }

  .reach {
    flex-direction: row;
    gap: 4rem;
  }

  .myskill {
    display: block;
    border: 1px solid #fff;
    width: 25%;
    position: absolute;
    left: 5rem;
    bottom: 2rem;
    background-color: #00000046;
  }
  .abt {
    width: 30%;
    max-width: 20rem;
  }
  .writeup {
    border: 1px dashed gray;
    max-width: 500px;
    justify-self: center;
  }
}

@media screen and (min-width: 1200px){
  .reach {
    align-self: center;
    justify-content: center;
    align-content: center;
  }
}

